# openswg

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  NEWS  README  THANKS  bootstrap
build-aux/windows/: user_project.vcxproj.in
cmake/: FindMYSQLPP.cmake
data/config/: login.ini  zoneprecu.ini
data/sql/: precu_naritus.sql  station.sql
include/gsApplication/: application.h  export.h  gsapplication.h
include/gsCore/: base.h  callback.h  config.h  datastore.h  event.h  eventdata.h  eventlistener.h  eventmanager.h  eventtype.h  export.h  globals.h  gs.h  log.h  logevents.h  macros.h  md5.h  options.h  process.h  processmanager.h  sha1.h  timing.h  types.h
include/gsNetwork/: adminsocket.h  binarypacket.h  clientsocket.h  commsocket.h  events.h  export.h  gamesocket.h  gamesocketfactory.h  gamesocketlistener.h  networkaddress.h  networkmessage.h  pingsocket.h  priorityqueue.h
include/gsObjects/: export.h
include/gsServer/: export.h  gsserver.h  opcodehandler.h  serverapplication.h  servereventlistener.h  serverevents.h  session.h  sessioneventlistener.h  sessionevents.h  sessionmanager.h
include/osLogin/: authmanager.h  loginserver.h  loginservereventlistener.h
include/osSOEProtocol/: accountversionmessage.h  acknowledgemessage.h  animationmessage.h  assigncharacteridmessage.h  cellmovementmessage.h  charactercreationrequest.h  characterlistmessage.h  characteroptionsmessage.h  characteroptionsvalidationrequest.h  compression.h  connectionserverlistmessage.h  creatureobject.h  creatureobjectproxy.h  creo1message.h  creo3message.h  creo4message.h  creo6message.h  creoinitmessage.h  datachannelmessage.h  disconnectmessage.h  emotemessage.h  encryption.h  export.h  factionupdatemessage.h  galaxylistmessage.h  galaxymanager.h  galaxymanagerlistener.h  loadreadymessage.h  loadterrainmessage.h  logincharacterrequest.h  moods.h  movementmessage.h  multimessage.h  netstatusrequestmessage.h  netstatusresponsemessage.h  objclosemessage.h  objdestroymessage.h  object.h  objectcomponent.h  objectcomponenttemplate.h  (+52 more)
include/osZonePreCU/: authmanager.h  charactercreationmanager.h  creatureobject.h  creatureobjectproxy.h  object.h  objectgrid.h  objectmanager.h  objectproperty.h  objectpropertytypes.h  objectproxy.h  playercreatureobject.h  playercreatureobjectproxy.h  precuzoneserver.h  precuzoneservereventlistener.h  radialmenu.h  staticnpcmanager.h  tangibleobject.cpp  tangibleobject.h  tangibleobjectproxy.h  travelmanager.h
src/Sockets/: CMakeLists.txt  Sockets-config.cpp  socket_include.h  sockets-config.h
src/gsApplication/: CMakeLists.txt  application.cpp  application.h
src/gsCore/: CMakeLists.txt  base.h  callback.cpp  callback.h  config.cpp  config.h  datastore.cpp  datastore.h  event.h  eventdata.h  eventlistener.cpp  eventlistener.h  eventmanager.cpp  eventmanager.h  eventtype.h  globals.cpp  globals.h  log.cpp  logevents.cpp  macros.h  md5.cpp  md5.h  options.cpp  options.h  process.cpp  process.h  processmanager.cpp  processmanager.h  sha1.cpp  sha1.h  timing.h
src/gsNetwork/: CMakeLists.txt  adminsocket.cpp  adminsocket.h  binarypacket.cpp  binarypacket.h  clientsocket.cpp  clientsocket.h  commsocket.cpp  commsocket.h  events.cpp  events.h  gamesocket.cpp  gamesocket.h  gamesocketfactory.cpp  gamesocketfactory.h  gamesocketlistener.cpp  gamesocketlistener.h  network_address.h  networkaddress.cpp  networkaddress.h  networkmessage.cpp  networkmessage.h  pingsocket.cpp  pingsocket.h  priorityqueue.cpp  priorityqueue.h  udp_event_socket.cc  udp_event_socket.h
src/gsObjects/: CMakeLists.txt
src/gsServer/: CMakeLists.txt  gsserver.h  opcodehandler.cpp  opcodehandler.h  server_application.cc  server_application.h  serverapplication.cpp  serverapplication.h  servereventlistener.cpp  servereventlistener.h  serverevents.cpp  serverevents.h  session.cpp  session.h  sessioneventlistener.cpp  sessioneventlistener.h  sessionevents.cpp  sessionevents.h  sessionmanager.cpp  sessionmanager.h
src/osLogin/: CMakeLists.txt  authmanager.cpp  authmanager.h  loginserver.cpp  loginserver.h  loginservereventlistener.cpp  loginservereventlistener.h  loginsrv.cpp
src/osSOEProtocol/: CMakeLists.txt  accountversionmessage.cpp  accountversionmessage.h  acknowledgemessage.cpp  acknowledgemessage.h  animationmessage.cpp  animationmessage.h  assigncharacteridmessage.cpp  assigncharacteridmessage.h  cellmovementmessage.cpp  cellmovementmessage.h  charactercreationrequest.cpp  charactercreationrequest.h  characterlistmessage.cpp  characterlistmessage.h  characteroptionsmessage.cpp  characteroptionsmessage.h  characteroptionsvalidationrequest.cpp  characteroptionsvalidationrequest.h  compression.cpp  compression.h  connectionserverlistmessage.cpp  connectionserverlistmessage.h  creatureobject.cpp  creatureobject.h  creatureobjectproxy.cpp  creatureobjectproxy.h  creo1message.cpp  creo1message.h  creo3message.cpp  creo3message.h  creo4message.cpp  creo4message.h  creo6message.cpp  creo6message.h  creoinitmessage.cpp  creoinitmessage.h  datachannelmessage.cpp  datachannelmessage.h  disconnectmessage.cpp  (+134 more)
src/osZonePreCU/: CMakeLists.txt  authmanager.cpp  authmanager.h  charactercreationmanager.cpp  charactercreationmanager.h  creatureobject.cpp  creatureobjectproxy.cpp  object.cpp  objectgrid.cpp  objectmanager.cpp  objectpropertytypes.cpp  objectproxy.cpp  objlinkmessage.cpp  playercreatureobject.cpp  playercreatureobjectproxy.cpp  precuzoneserver.cpp  precuzoneserver.h  precuzoneservereventlistener.cpp  precuzoneservereventlistener.h  radialmenu.cpp  staticnpcmanager.cpp  staticnpcmanager.h  tangibleobjectproxy.cpp  tano3message.cpp  tano6message.cpp  tano8message.cpp  tano9message.cpp  travelmanager.cpp  travelmanager.h  zonesrv.cpp
tests/: tests_runner.cpp
tests/galaxy/: base_server_test.cpp  base_server_test.h  binary_packet_test.cpp  binary_packet_test.h  session_manager_test.cpp  session_manager_test.h  socket_listener_test.cpp  socket_listener_test.h
tests/mocks/: protocol_handler_mock.h  socket_listener_mock.h  zthread_executor_mock.cpp  zthread_executor_mock.h
(+1 files in other folders)
